--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=${db.method:validate}
 spring.jpa.show-sql=false
 spring.batch.initialize-schema=always
+spring.main.allow-bean-definition-overriding=true
